TPS/TP-lex-menhir/Impcat/_build/default/impparser.automaton
State 0:
## Known stack suffix:
##
## LR(1) items:
program' -> . program [ # ]
## Transitions:
-- On FUNCTION shift to state 1
-- On program shift to state 20
-- On list(fun_def) shift to state 21
-- On fun_def shift to state 23
## Reductions:
-- On EOF
--   reduce production list(fun_def) ->

State 1:
## Known stack suffix:
## FUNCTION
## LR(1) items:
fun_def -> FUNCTION . IDENT LPAR RPAR BEGIN list(instr) END [ FUNCTION EOF ]
## Transitions:
-- On IDENT shift to state 2
## Reductions:

State 2:
## Known stack suffix:
## FUNCTION IDENT
## LR(1) items:
fun_def -> FUNCTION IDENT . LPAR RPAR BEGIN list(instr) END [ FUNCTION EOF ]
## Transitions:
-- On LPAR shift to state 3
## Reductions:

State 3:
## Known stack suffix:
## FUNCTION IDENT LPAR
## LR(1) items:
fun_def -> FUNCTION IDENT LPAR . RPAR BEGIN list(instr) END [ FUNCTION EOF ]
## Transitions:
-- On RPAR shift to state 4
## Reductions:

State 4:
## Known stack suffix:
## FUNCTION IDENT LPAR RPAR
## LR(1) items:
fun_def -> FUNCTION IDENT LPAR RPAR . BEGIN list(instr) END [ FUNCTION EOF ]
## Transitions:
-- On BEGIN shift to state 5
## Reductions:

State 5:
## Known stack suffix:
## FUNCTION IDENT LPAR RPAR BEGIN
## LR(1) items:
fun_def -> FUNCTION IDENT LPAR RPAR BEGIN . list(instr) END [ FUNCTION EOF ]
## Transitions:
-- On PRINT shift to state 6
-- On list(instr) shift to state 16
-- On instr shift to state 18
## Reductions:
-- On END
--   reduce production list(instr) ->

State 6:
## Known stack suffix:
## PRINT
## LR(1) items:
instr -> PRINT . LPAR expr RPAR SEMI [ PRINT END ]
## Transitions:
-- On LPAR shift to state 7
## Reductions:

State 7:
## Known stack suffix:
## PRINT LPAR
## LR(1) items:
instr -> PRINT LPAR . expr RPAR SEMI [ PRINT END ]
## Transitions:
-- On INT shift to state 8
-- On expr shift to state 9
## Reductions:

State 8:
## Known stack suffix:
## INT
## LR(1) items:
expr -> INT . [ STAR RPAR PLUS ]
## Transitions:
## Reductions:
-- On STAR RPAR PLUS
--   reduce production expr -> INT

State 9:
## Known stack suffix:
## PRINT LPAR expr
## LR(1) items:
expr -> expr . PLUS expr [ STAR RPAR PLUS ]
expr -> expr . STAR expr [ STAR RPAR PLUS ]
instr -> PRINT LPAR expr . RPAR SEMI [ PRINT END ]
## Transitions:
-- On STAR shift to state 10
-- On RPAR shift to state 12
-- On PLUS shift to state 14
## Reductions:

State 10:
## Known stack suffix:
## expr STAR
## LR(1) items:
expr -> expr STAR . expr [ STAR RPAR PLUS ]
## Transitions:
-- On INT shift to state 8
-- On expr shift to state 11
## Reductions:

State 11:
## Known stack suffix:
## expr STAR expr
## LR(1) items:
expr -> expr . PLUS expr [ STAR RPAR PLUS ]
expr -> expr . STAR expr [ STAR RPAR PLUS ]
expr -> expr STAR expr . [ STAR RPAR PLUS ]
## Transitions:
## Reductions:
-- On STAR RPAR PLUS
--   reduce production expr -> expr STAR expr

State 12:
## Known stack suffix:
## PRINT LPAR expr RPAR
## LR(1) items:
instr -> PRINT LPAR expr RPAR . SEMI [ PRINT END ]
## Transitions:
-- On SEMI shift to state 13
## Reductions:

State 13:
## Known stack suffix:
## PRINT LPAR expr RPAR SEMI
## LR(1) items:
instr -> PRINT LPAR expr RPAR SEMI . [ PRINT END ]
## Transitions:
## Reductions:
-- On PRINT END
--   reduce production instr -> PRINT LPAR expr RPAR SEMI

State 14:
## Known stack suffix:
## expr PLUS
## LR(1) items:
expr -> expr PLUS . expr [ STAR RPAR PLUS ]
## Transitions:
-- On INT shift to state 8
-- On expr shift to state 15
## Reductions:

State 15:
## Known stack suffix:
## expr PLUS expr
## LR(1) items:
expr -> expr . PLUS expr [ STAR RPAR PLUS ]
expr -> expr PLUS expr . [ STAR RPAR PLUS ]
expr -> expr . STAR expr [ STAR RPAR PLUS ]
## Transitions:
-- On STAR shift to state 10
## Reductions:
-- On RPAR PLUS
--   reduce production expr -> expr PLUS expr

State 16:
## Known stack suffix:
## FUNCTION IDENT LPAR RPAR BEGIN list(instr)
## LR(1) items:
fun_def -> FUNCTION IDENT LPAR RPAR BEGIN list(instr) . END [ FUNCTION EOF ]
## Transitions:
-- On END shift to state 17
## Reductions:

State 17:
## Known stack suffix:
## FUNCTION IDENT LPAR RPAR BEGIN list(instr) END
## LR(1) items:
fun_def -> FUNCTION IDENT LPAR RPAR BEGIN list(instr) END . [ FUNCTION EOF ]
## Transitions:
## Reductions:
-- On FUNCTION EOF
--   reduce production fun_def -> FUNCTION IDENT LPAR RPAR BEGIN list(instr) END

State 18:
## Known stack suffix:
## instr
## LR(1) items:
list(instr) -> instr . list(instr) [ END ]
## Transitions:
-- On PRINT shift to state 6
-- On list(instr) shift to state 19
-- On instr shift to state 18
## Reductions:
-- On END
--   reduce production list(instr) ->

State 19:
## Known stack suffix:
## instr list(instr)
## LR(1) items:
list(instr) -> instr list(instr) . [ END ]
## Transitions:
## Reductions:
-- On END
--   reduce production list(instr) -> instr list(instr)

State 20:
## Known stack suffix:
## program
## LR(1) items:
program' -> program . [ # ]
## Transitions:
## Reductions:
-- On #
--   accept program

State 21:
## Known stack suffix:
## list(fun_def)
## LR(1) items:
program -> list(fun_def) . EOF [ # ]
## Transitions:
-- On EOF shift to state 22
## Reductions:

State 22:
## Known stack suffix:
## list(fun_def) EOF
## LR(1) items:
program -> list(fun_def) EOF . [ # ]
## Transitions:
## Reductions:
-- On #
--   reduce production program -> list(fun_def) EOF

State 23:
## Known stack suffix:
## fun_def
## LR(1) items:
list(fun_def) -> fun_def . list(fun_def) [ EOF ]
## Transitions:
-- On FUNCTION shift to state 1
-- On list(fun_def) shift to state 24
-- On fun_def shift to state 23
## Reductions:
-- On EOF
--   reduce production list(fun_def) ->

State 24:
## Known stack suffix:
## fun_def list(fun_def)
## LR(1) items:
list(fun_def) -> fun_def list(fun_def) . [ EOF ]
## Transitions:
## Reductions:
-- On EOF
--   reduce production list(fun_def) -> fun_def list(fun_def)

